# yard

./: .gitignore  README.md  installer.iss  pyproject.toml  requirements.txt  setup_deno.ps1  update_version.py
.github/workflows/: ci.yml  release.yml
src/: .yard_settings.json  main.py  updater.py
src/core/: __init__.py  constants.py  downloader.py  queue_manager.py  settings_manager.py  update_checker.py
src/ui/: __init__.py  components.py  dialogs.py
src/utils/: helpers.py  notifications.py
