[project]
name = "yard"
version = "1.0.3"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Razik", email = "razikajee@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "yt-dlp[default,curl-cffi]",
  "imageio-ffmpeg",
  "pyperclip",
  "psutil",
  "packaging",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "net.razik.yard"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "yard"

# company name to display in about app dialogs
company = "Razik"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Razik"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}